# herald

./: .gitignore  herald.toml.example  pyproject.toml
.githooks/: pre-commit
queries/: example.sql
scripts/: pre-commit
src/herald/: __init__.py  cli.py  config.py
src/herald/agents/: __init__.py  compose.py  data.py  delivery.py  orchestrator.py  review.py  tools.py
src/herald/backends/: __init__.py  gcloud_gmail.py  gmail.py
src/herald/datasources/: __init__.py  databricks.py
src/herald/templates/: base.html
stakeholders/: example.md
